spade-tests/src/snapshots/spade_tests__wordlength_inference__if_conditions_are_visited_ia.snap
---
source: spade-tests/src/wordlength_inference.rs
---
struct X { x: int<4>, }

fn f(a: X) -> int<4> {
  let p = a.x;
  if 0 == trunc(p + 1) {
    0
  } else {
    0
  }
}

entity main(clk: clock, rst: bool) -> int<4> {
  f( X$( x: 0 ) )
}


error: Type error
   ┌─ testinput:3:22
   │  
 3 │   fn f(a: X) -> int<4> {
   │                 ------ int<-8, 7> type specified here
   │ ╭──────────────────────^
 4 │ │   let p = a.x;
 5 │ │   if 0 == trunc(p + 1) {
 6 │ │     0
   · │
 9 │ │   }
10 │ │ }
   │ ╰─^ Found type int<0, 0>
   │  
   = Expected: -8
   =       in: int<-8, 7>
   =      Got: 0
   =       in: int<0, 0>

error: Argument type mismatch
   ┌─ testinput:13:13
   │
13 │   f( X$( x: 0 ) )
   │             ^ Expected int<-8, 7>
   │
   = Expected: int<-8, 7>
   =      Got: int<0, 0>


