spade-tests/src/snapshots/spade_tests__wordlength_inference__inner_functions_ia.snap
---
source: spade-tests/src/wordlength_inference.rs
---
fn g() -> int<3> { 0 }
fn f<a, b>(a: int<2>) -> int<0> {
    g() + a
}
entity main(clk: clock, rst: bool) -> int<0> { f(0) }


error: Type error
  ┌─ testinput:1:18
  │
1 │ fn g() -> int<3> { 0 }
  │           ------ ^^^^^ Found type int<0, 0>
  │           │       
  │           int<-4, 3> type specified here
  │
  = Expected: -4
  =       in: int<-4, 3>
  =      Got: 0
  =       in: int<0, 0>

error: Argument type mismatch
  ┌─ testinput:5:50
  │
5 │ entity main(clk: clock, rst: bool) -> int<0> { f(0) }
  │                                                  ^ Expected int<-2, 1>
  │
  = Expected: int<-2, 1>
  =      Got: int<0, 0>


