spade-tests/src/snapshots/spade_tests__wordlength_inference__multiple_generics_aaia.snap
---
source: spade-tests/src/wordlength_inference.rs
---
fn f<a, aa, b, bb>(a: int<a..aa>, b: int<b..bb>) -> int<b..bb> {
  a + b
}

entity main(clk: clock, rst: bool) -> int<0> {
  let x: int<5> = f(0, 10);
  let y: int<5> = f(1, 10);
  0
}


error: Expected type int<-16, 15>, got int<10, 10>
  ┌─ testinput:6:19
  │
6 │   let x: int<5> = f(0, 10);
  │                   ^^^^^^^^ Expected int<-16, 15> here


