spade-tests/src/snapshots/spade_tests__wordlength_inference__multiplication_and_addition_ia.snap
---
source: spade-tests/src/wordlength_inference.rs
---
fn f<a, b>(a: int<4>, b: int<4>) -> int<0> {
  a * b + a + b
}
entity main(clk: clock, rst: bool) -> int<0> { f(0, 0) }


error: Argument type mismatch
  ┌─ testinput:4:50
  │
4 │ entity main(clk: clock, rst: bool) -> int<0> { f(0, 0) }
  │                                                  ^ Expected int<-8, 7>
  │
  = Expected: int<-8, 7>
  =      Got: int<0, 0>


