spade-tests/src/snapshots/spade_tests__wordlength_inference__simple_subtraction_aa.snap
---
source: spade-tests/src/wordlength_inference.rs
---
fn f(a: int<4>) -> int<0> {
  a - a + 1
}
entity main(clk: clock, rst: bool) -> int<0> { f(1) }


error: Argument type mismatch
  ┌─ testinput:4:50
  │
4 │ entity main(clk: clock, rst: bool) -> int<0> { f(1) }
  │                                                  ^ Expected int<-8, 7>
  │
  = Expected: int<-8, 7>
  =      Got: int<1, 1>


