spade-tests/src/snapshots/spade_tests__wordlength_inference__wordlength_inference_aaia.snap
---
source: spade-tests/src/wordlength_inference.rs
---
fn p<#N, #M>(x: int<N..M>) -> int<N..M> { x }

fn f(a: int<5>) -> int<7> {
  1 * p(a) + 1
}

entity main(clk: clock, rst: bool) -> int<7> {
  f(3)
}


error: Argument type mismatch
  ┌─ testinput:8:5
  │
8 │   f(3)
  │     ^ Expected int<-16, 15>
  │
  = Expected: int<-16, 15>
  =      Got: int<3, 3>


